<resources>
    <string name="app_name">Nextcloud Tables</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="simple_title">Title</string>
    <string name="simple_exception">Exception</string>
    <string name="simple_save">Save</string>
    <string name="simple_close">Close</string>
    <string name="simple_copy">Copy</string>
    <string name="simple_delete">Delete</string>
    <string name="simple_settings">Settings</string>
    <string name="simple_about">About</string>
    <string name="simple_synchronization">Synchronisation</string>
    <string name="simple_appearance">Appearance</string>
    <string name="simple_emoji">Emoji</string>
    <string name="simple_mandatory">Mandatory</string>
    <string name="simple_description">Description</string>
    <string name="simple_type">Type</string>
    <string name="simple_subtype">Subtype</string>
    <string name="simple_default_value">Default value</string>
    <string name="simple_max_length">Max length</string>
    <string name="simple_min_value">Min</string>
    <string name="simple_max_value">Max</string>
    <string name="simple_decimals">Decimals</string>
    <string name="simple_prefix">Prefix</string>
    <string name="simple_suffix">Suffix</string>
    <string name="simple_label">Label</string>
    <string name="add_table">Add table</string>
    <string name="add_row">Add row</string>
    <string name="duplicate_row">Duplicate row</string>
    <string name="edit_row">Edit row</string>
    <string name="manage_columns">Manage columns</string>
    <string name="edit_column">Edit column</string>
    <string name="delete_column">Delete column</string>
    <string name="preferences">Preferences</string>
    <string name="import_account">Import account</string>
    <string name="choose_account">Choose account</string>
    <string name="app_logo">App logo</string>
    <string name="app_name_short">Tables</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="add_account">Add account</string>
    <string name="edit_table">Edit table</string>
    <string name="edit_item">Edit %1$s</string>
    <string name="share_table">Share table</string>
    <string name="not_implemented">This feature has not been implemented yet</string>
    <string name="delete_table">Delete table</string>
    <string name="hint_error_appeared">An error appeared</string>
    <string name="delete_item">Delete %1$s</string>
    <string name="delete_item_message">This will permanently delete %1$s.</string>
    <string name="delete_row">Delete row</string>
    <string name="delete_row_message">This will permanently delete this row.</string>
    <string name="about">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_version">You are currently using %1$s</string>
    <string name="about_maintainer_title">Maintainer</string>
    <string name="about_maintainer" translatable="false">Niedermann IT-Dienstleistungen</string>
    <string name="about_developers_title">Developers</string>
    <string name="about_developers" translatable="false">Stefan Niedermann</string>
    <string name="about_translators_title">Translators</string>
    <string name="about_translators_transifex">Nextcloud community on %1$s</string>
    <string name="about_translators_transifex_label">Transifex</string>
    <string name="about_source_title">Source code</string>
    <string name="about_source">This project is hosted on GitHub: %1$s</string>
    <string name="about_issues_title">Issues</string>
    <string name="about_issues">You can report bugs, enhancement proposals and feature requests at the GitHub issue tracker: %1$s</string>
    <string name="about_translate_title">Translate</string>
    <string name="about_translate">Join the Nextcloud team on Transifex and help us to translate this app: %1$s</string>
    <string name="about_app_license_title">App license</string>
    <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v3+.</string>
    <string name="about_app_license_button">View license</string>
    <string name="about_app_icon_author_link_label" translatable="false">GitHub</string>
    <string name="about_icons_disclaimer_title">Icons</string>
    <string name="about_icons_disclaimer_app_icon">For the original icon see %1$s.</string>
    <string name="about_icons_disclaimer_mdi_icons">All further icons used by this app are %1$s made by Google Inc. and licensed under the Apache 2.0 License.</string>
    <string name="about_icons_disclaimer_mdi">Material Design Icons</string>
    <string name="about_credits_tab_title">Credits</string>
    <string name="about_contribution_tab_title">Contribution</string>
    <string name="about_license_tab_title">License</string>
    <string name="about_server_app_version_text">Server app version:</string>
    <string name="error_dialog_title">Oh no - What now? 🙁</string>
    <string name="error_dialog_tip_token_mismatch_retry">Please try to force close the app and restart it again. There might have been an incorrect connection to the Nextcloud app.</string>
    <string name="error_dialog_tip_clear_storage_might_help">If the issue persists, try to clear the storage of both apps: Nextcloud and Nextcloud Tables to solve this issue.</string>
    <string name="error_dialog_tip_database_upgrade_failed">The upgrade of the database failed. Please report the issue and clear the storage to use the app normally.</string>
    <string name="error_dialog_tip_clear_storage">You can clear the storage by opening the app info and selecting Storage → Clear storage.</string>
    <string name="error_dialog_tip_offline_no_internet">It looks like you tried to trigger a synchronization without an internet connection.</string>
    <string name="error_dialog_tip_offline_connection_refused">Connection was refused, please check if your server is reachable via web browser.</string>
    <string name="error_dialog_tip_offline_connection_timeout">Connection timed out, please check if you\'re connected to the internet. This may also happen when your server is busy.</string>
    <string name="error_dialog_tip_sync_only_on_wifi">If you have enabled the "Sync only on Wi-Fi" setting, you can only synchronize when you are connected to a Wi-Fi.</string>
    <string name="error_dialog_tip_files_force_stop">Something seems to be wrong with your Nextcloud app. Please try to force stop both, the Nextcloud app and the Nextcloud Tables app.</string>
    <string name="error_dialog_tip_files_delete_storage">If force stopping them does not help, you can try to clear the storage of both apps.</string>
    <string name="error_dialog_timeout_instance">There wasn\'t a response from your server in the given time. Please make sure your instance is running well.</string>
    <string name="error_dialog_timeout_toggle">Check your network connection. Sometimes toggling the mobile data or Wi-Fi off and on again can help.</string>
    <string name="error_dialog_check_server">The response of your server was not correct. Please check whether you can access the Tables app via web interface.</string>
    <string name="error_dialog_check_server_logs">There is an issue with your Nextcloud setup. Please have a look into the server log files.</string>
    <string name="error_dialog_check_maintenance">Please check whether your Nextcloud instance is not currently in maintenance mode.</string>
    <string name="error_dialog_insufficient_storage">Your Nextcloud instance has no free storage left. Please delete some files to sync your local changes into your cloud.</string>
    <string name="error_dialog_we_need_info">We need the following technical information to help you:</string>
    <string name="error_dialog_redirect">Your server did respond with a HTTP 302 status code, which implies, that you do not have installed the Tables app on your server or something is misconfigured. This can be caused by custom overrides in a .htaccess-file or by Nextcloud apps like OID Client.</string>
    <string name="error_dialog_forbidden">You have insufficient permissions. Please check tables which are shared to you and have been changed recently.</string>
    <string name="error_dialog_version_not_parsable">We could not determine the version of the server side Tables app. Please make sure it is installed and enabled.</string>
    <string name="error_dialog_account_might_not_be_authorized">The account of your Nextcloud app might no longer be authorized.</string>
    <string name="error_dialog_user_not_found_in_database">The current user does not match the user we have in our database. If you are using LDAP on your Nextcloud instance, your Nextcloud app might have stored an old user ID.</string>
    <string name="error_dialog_capabilities_not_parsable">We could not fetch the capabilities of your server. Please make sure your server is running well and other client apps are able to access Nextcloud.</string>
    <string name="error_dialog_attachment_upload_failed">An attachment could not be uploaded. Please try to share it on another way and let us know about this bug.</string>
    <string name="error_dialog_certificate">Something seems to be wrong with the certificate of the server. Please check all the accounts in the Nextcloud app for further information.</string>
    <string name="error_dialog_tip_disable_battery_optimizations">Please disable all battery optimizations for Nextcloud and the Tables app.</string>
    <string name="error_dialog_unknown_error">Your Nextcloud instance seems to be not reachable. Please check your internet connection and whether you are able to connect to your instance via browser.</string>
    <string name="error_dialog_min_version">The Tables Android app requires the Nextcloud Android app to be at least version 3.18.</string>
    <string name="error_action_open_app_info">Open App info</string>
    <string name="error_action_open_nextcloud_app">Open Nextcloud app</string>
    <string name="error_action_open_network">Network settings</string>
    <string name="error_action_server_logs">Server logs</string>
    <string name="error_action_open_in_browser">Open in browser</string>
    <string name="error_action_install">Install</string>
    <string name="error_action_report_issue">Report</string>
    <string name="error_action_update_files_app">Update</string>
    <string name="error_action_open_battery_settings">Battery settings</string>
    <string name="url_maintainer" translatable="false">https://www.niedermann.it/</string>
    <string name="url_about_icon_author" translatable="false">https://github.com/nextcloud/tables/commit/88125ff616143661c2dc11ab0817e17b98aedb92</string>
    <string name="url_source" translatable="false">https://github.com/stefan-niedermann/nextcloud-tables</string>
    <string name="url_issues" translatable="false">https://github.com/stefan-niedermann/nextcloud-tables/issues/new/choose</string>
    <string name="url_report_bug" translatable="false">https://github.com/stefan-niedermann/nextcloud-tables/issues/new?labels=bug&amp;template=bug_report.md</string>
    <string name="last_background_sync">Last background sync:</string>
    <string name="text_allowed_pattern">Allowed pattern</string>
    <string name="experimental_feature_column_manage">Editing columns is an experimental feature which may have unintended side effects that can result in data loss.</string>
    <string name="usergroup_users">Users</string>
    <string name="usergroup_groups">Groups</string>
    <string name="usergroup_teams">Teams</string>
    <string name="select_multiple_items">Select multiple items</string>
    <string name="show_user_status">Show user status</string>
    <string name="add_table_to_favorites">Add to favorites</string>
    <string name="archive_table">Archive table</string>
</resources>