<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="it.niedermann.nextcloud.tables.features.about.AboutViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacer_2x">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:drawablePadding="@dimen/spacer_2x"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="26sp"
                app:drawableTopCompat="@mipmap/ic_launcher" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/spacer_1x"
                    android:paddingStart="@dimen/spacer_1x"
                    android:paddingEnd="0dp"
                    android:text="@string/last_background_sync"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/last_background_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/spacer_1x"
                    android:paddingStart="@dimen/spacer_1x"
                    android:text="@{vm.lastBackgroundSync}"
                    tools:ignore="RtlSymmetry"
                    tools:text="20 seconds ago" />
            </LinearLayout>

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacer_1x"
                android:text="@string/about_version"
                app:appVersion="@{vm.appVersion}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/serverAppVersions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:serverVersions="@{vm.tablesServerVersion}"
                tools:itemCount="3"
                tools:listitem="@layout/item_account_and_version" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_maintainer_title" />

            <TextView
                android:id="@+id/about_maintainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about_maintainer" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_developers_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about_developers" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_translators_title" />

            <TextView
                android:id="@+id/about_translators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/about_translators_transifex" />
        </LinearLayout>
    </ScrollView>
</layout>