<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_table"
        android:icon="@drawable/ic_baseline_add_24"
        android:orderInCategory="10"
        android:title="@string/add_table"
        app:showAsAction="never" />
    <item
        android:id="@+id/preferences"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="20"
        android:title="@string/preferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_outline_info_24"
        android:orderInCategory="30"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>