<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/edit_column" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/experimentalFeature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorErrorContainer"
        android:drawablePadding="@dimen/spacer_2x"
        android:paddingHorizontal="@dimen/spacer_2x"
        android:paddingVertical="@dimen/spacer_1x"
        android:text="@string/experimental_feature_column_manage"
        android:textColor="?attr/colorOnErrorContainer"
        app:drawableStartCompat="@drawable/baseline_warning_amber_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_2x"
        android:layout_marginTop="@dimen/spacer_2x"
        android:hint="@string/simple_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_2x"
        android:layout_marginTop="@dimen/spacer_2x"
        android:hint="@string/simple_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_2x"
        android:layout_marginTop="@dimen/spacer_2x"
        android:orientation="horizontal">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/mandatory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/simple_mandatory" />
    </LinearLayout>

    <it.niedermann.nextcloud.tables.ui.column.edit.EDataTypePicker
        android:id="@+id/typeSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_2x"
        android:layout_marginTop="@dimen/spacer_2x" />

    <FrameLayout
        android:id="@+id/managerHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>