<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="it.niedermann.nextcloud.tables.database.model.EUserGroupType" />

        <variable
            name="manager"
            type="it.niedermann.nextcloud.tables.features.column.edit.types.usergroup.UserGroupManager" />
    </data>

    <LinearLayout
        android:id="@+id/checkbox_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:enabled="@{manager.enableUsers}"
                android:onCheckedChanged="@{() -> manager.ensureAtLeastOneTypeEnabled()}"
                android:text="@string/usergroup_users" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{manager.enableGroups}"
                android:onCheckedChanged="@{() -> manager.ensureAtLeastOneTypeEnabled()}"
                android:text="@string/usergroup_groups" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/teams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{manager.enableTeams}"
                android:onCheckedChanged="@{() -> manager.ensureAtLeastOneTypeEnabled()}"
                android:text="@string/usergroup_teams" />
        </LinearLayout>

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/searchWrapper"-->
<!--            style="?attr/textInputOutlinedExposedDropdownMenuStyle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="@dimen/spacer_1x"-->
<!--            android:enabled="false"-->
<!--            android:hint="@string/search_hint"-->
<!--            android:labelFor="@id/search"-->
<!--            app:endIconDrawable="@drawable/baseline_clear_24"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <com.google.android.material.textfield.MaterialAutoCompleteTextView-->
<!--                android:id="@+id/search"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:autofillHints="@null"-->
<!--                android:imeOptions="actionSearch|actionDone"-->
<!--                android:inputType="textUri"-->
<!--                android:maxLines="1"-->
<!--                android:selectAllOnFocus="true" />-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/select_multiple_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_multiple_items" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/show_user_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_user_status"
            android:visibility="@{manager.showUserStatusVisibility}"
            tools:visibility="visible" />
    </LinearLayout>
</layout>